--- a/custom.css
+++ b/custom.css
@@ -20,3 +20,34 @@ html body {
   overflow-x: hidden;
   max-height: none;
 }
+
+.reveal footer {
+    bottom: 0px;
+    border-top: #1d9ceb solid 1px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    position: fixed;
+    width: 100%;
+    z-index: 1;
+}
+
+.reveal footer img {
+    position: relative;
+    float: left;
+    height: 50px;
+    margin-left: 10px;
+}
+
+.reveal footer p {
+    color: #1d9ceb;
+    font-size: 10pt;
+    position: relative;
+    float: left;
+    margin-left: 10px;
+    margin-top: 18px;
+}
+
+.reveal footer a {
+    color: #1d9ceb !important;
+    text-decoration: underline !important;
+}
