--- a/custom.css
+++ b/custom.css
@@ -11,10 +11,26 @@ html body {
 
 .reveal section table td, .reveal section table th {
     padding: 20px;
-    border: solid grey 1px; 
+    border: solid grey 1px;
+    font-size: 20pt;
 }
 
-.reveal section table { border-collapse: collapse; } 
+.reveal section h1,
+.reveal section h2 {
+    font-weight: bold;
+    line-height: 1.1em;
+}
+
+
+.reveal section h1 {
+    font-size: 3em;
+}
+
+.reveal section h2 {
+    font-size: 2.4em;
+}
+
+.reveal section table { border-collapse: collapse; }
 
 .reveal .slides {
     margin-top: -60px;
